--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@fullcalendar/angular": "^6.1.18",
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
     "@ionic/angular": "^8.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "daisyui": "^5.0.50",
