--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/service-worker": "^19.2.0",
+    "@capacitor-firebase/authentication": "^7.3.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.4.2",
     "@capacitor/haptics": "7.0.1",
@@ -34,6 +35,7 @@
     "@ionic/angular": "^8.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "daisyui": "^5.0.50",
+    "firebase": "^11.10.0",
     "ionicons": "^7.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
