🚧  Actualizar la configuración de la PWA . Se añade el archivo manifest.webmanifest y se configuran los encabezados en firebase.json. Se implementa la lógica para mostrar el botón de instalación de la PWA en app.component.html y se ajusta el archivo ngsw-config.json para incluir los iconos.

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,16 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
+              },
+              {
+                "glob": "manifest.webmanifest",
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "icons/**/*",
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
